# engine

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_editor.sh  build_sandbox.sh  build_windows.sh  compile_shaders.sh  imgui.ini  imgui_default.ini  run.sh  run_editor.sh  run_sandbox.sh  run_windows.sh  vulture-sandbox
editor/: CMakeLists.txt
editor/include/: camera_movement.hpp  editor_app.hpp
editor/include/panels/: entities_panel.hpp  inspector_panel.hpp  preview_panel.hpp  renderer_info_panel.hpp
editor/src/: CMakeLists.txt  camera_movement.cpp  editor_app.cpp  main.cpp
editor/src/panels/: CMakeLists.txt  entities_panel.cpp  inspector_panel.cpp  preview_panel.cpp  renderer_info_panel.cpp
editor/src/veditor/: camera_movement.cpp  editor_app.cpp  editor_app.hpp
editor/src/veditor/panels/: entities_panel.cpp  entities_panel.hpp  inspector_panel.cpp  inspector_panel.hpp  preview_panel.cpp  preview_panel.hpp  renderer_panel.cpp  renderer_panel.hpp
engine/: CMakeLists.txt  ReadMe.md
engine/include/app/: app.hpp
engine/include/asset/: asset.hpp  asset_loader.hpp  asset_loader_registrar.hpp  asset_registry.hpp
engine/include/asset/detail/: asset_loader_registrar.hpp  extension.hpp
engine/include/asset/loaders/: glsl_loader.hpp  jpeg_loader.hpp  jpg_loader.hpp  obj_loader.hpp  png_loader.hpp  tga_loader.hpp
engine/include/audio/: audio_buffer.hpp  audio_context.hpp  audio_device.hpp  source_pool.hpp
engine/include/components/: components.hpp
engine/include/core/: core.hpp  resource_manager.hpp  uuid.hpp
engine/include/ecs/: api.hpp  api.ipp  component_holder.hpp  component_holder.ipp  entity_handle.hpp  entity_handle.ipp  generator.hpp  generator.ipp  registry.hpp  registry.ipp  view.hpp  view.ipp
engine/include/platform/: event.hpp  input.hpp  window.hpp
engine/include/platform/opengl/: opengl_buffer.hpp  opengl_cube_map.hpp  opengl_framebuffer.hpp  opengl_renderer_api.hpp  opengl_shader.hpp
engine/include/renderer/: buffer.hpp  cube_map.hpp  framebuffer.hpp  material.hpp  renderer_api.hpp  shader.hpp  texture.hpp
engine/include/renderer/3d/: camera.hpp  mesh.hpp  renderer3d.hpp  scene3d.hpp  transform.hpp
engine/include/scene/: components.hpp  scene.hpp  script.hpp
engine/input/: ReadMe.md  event.cpp  event.hpp
engine/modules/: CMakeLists.txt
engine/modules/fennecs/component/: registry.cpp  registry.hpp  registry.ipp  traits.cpp  traits.hpp  traits.ipp  virtual_table.cpp  virtual_table.hpp  virtual_table.ipp
engine/modules/fennecs/containers/: bit_mask.hpp
engine/modules/fennecs/core/: assert.hpp  types.hpp  utility.hpp  utility.ipp
engine/modules/fennecs/entity/: allocator.cpp  allocator.hpp  archetype.cpp  archetype.hpp  archetype.ipp  array.cpp  array.hpp  handle.cpp  handle.hpp  handle.ipp  impl.cpp  impl.hpp  layout.cpp  layout.hpp  layout.ipp  registry.cpp  registry.hpp  stream.cpp  stream.hpp  world.cpp  world.hpp  world.ipp
engine/modules/fennecs/intrusive/: list.hpp  list.ipp  node.hpp  node.ipp
engine/src/: CMakeLists.txt  camera_movement.cpp  camera_movement.hpp  main.cpp
engine/src/asset/: CMakeLists.txt  asset_registry.cpp
engine/src/asset/detail/: extension.cpp
engine/src/asset/loaders/: glsl_loader.cpp  jpeg_loader.cpp  jpg_loader.cpp  obj_loader.cpp  png_loader.cpp  tga_loader.cpp
engine/src/audio/: CMakeLists.txt  api.cpp  audio_context.cpp
engine/src/core/: CMakeLists.txt  resource_manager.cpp  uuid.cpp
engine/src/ecs/: CMakeLists.txt  api.cpp  entity_handle.cpp  registry.cpp
engine/src/platform/: CMakeLists.txt  event.cpp  input.cpp  window.cpp
engine/src/platform/opengl/: CMakeLists.txt  opengl_buffer.cpp  opengl_cube_map.cpp  opengl_framebuffer.cpp  opengl_renderer_api.cpp  opengl_shader.cpp
engine/src/renderer/: CMakeLists.txt  buffer.cpp  framebuffer.cpp  renderer_api.cpp  texture.cpp
engine/src/renderer/2d/: CMakeLists.txt
engine/src/renderer/3d/: CMakeLists.txt  camera.cpp  mesh.cpp  renderer3d.cpp  scene3d.cpp
engine/src/resource_loaders/: CMakeLists.txt  parse_obj.cpp
engine/src/scene/: CMakeLists.txt  scene.cpp
engine/src/script/: script_component.hpp
engine/src/vulture/asset/: asset_loader.hpp  asset_loader_registrar.hpp  asset_registry.cpp  asset_registry.hpp  asset_registry.ipp
engine/src/vulture/audio/: api.cpp  api.hpp  audio_source.hpp  buffer_manager.cpp  buffer_manager.hpp  source_pool.cpp
engine/src/vulture/core/: core.cpp  core.hpp  enum_str.cpp  enum_str.hpp  logger.cpp  logger.hpp  time.cpp  (+3 more)
engine/window/: ReadMe.md  window.cpp  window.hpp
sandbox/: CMakeLists.txt
sandbox/include/: sandbox_app.hpp
sandbox/src/: CMakeLists.txt  main.cpp  sandbox_app.cpp
src/: CMakeLists.txt  core.cpp  main.cpp
src/ECS/: CMakeLists.txt  Entity.cpp  entity.cpp  registry.cpp
src/app/: CMakeLists.txt  app.cpp
src/audio/: AudioBuffer.cpp  AudioContext.cpp  AudioDevice.cpp  AudioSource.cpp  CMakeLists.txt  SoundUtils.cpp  SourcePool.cpp  audio_buffer.cpp  audio_context.cpp  audio_device.cpp  audio_listener.cpp  audio_source.cpp  audio_utils.cpp  buffer_manager.cpp  source_pool.cpp
src/core/: CMakeLists.txt  core.cpp  logger.cpp  resource_manager.cpp  time.cpp
src/ecs/: CMakeLists.txt  api.cpp  entity_handle.cpp  registry.cpp
src/platform/: CMakeLists.txt  event.cpp  window.cpp
src/platform/opengl/: CMakeLists.txt  opengl_buffer.cpp  opengl_cube_map.cpp  opengl_framebuffer.cpp  opengl_renderer_api.cpp  opengl_shader.cpp  opengl_texture.cpp
src/renderer/: CMakeLists.txt  buffer.cpp  camera.cpp  core.cpp  cube_map.cpp  material.cpp  opengl_buffer.cpp  opengl_renderer_api.cpp  opengl_shader.cpp  opengl_texture.cpp  renderer3d.cpp  renderer_api.cpp  resource_loader.cpp  scene.cpp  shader.cpp  texture.cpp
src/renderer/2d/: CMakeLists.txt
src/renderer/3d/: CMakeLists.txt  mesh.cpp  renderer3d.cpp  scene3d.cpp
src/resource_loaders/: CMakeLists.txt  parse_obj.cpp
src/sandbox/: CMakeLists.txt  audio_sandbox.cpp  audio_sandbox.hpp  sandbox_app.cpp  sandbox_app.hpp
src/scene/: CMakeLists.txt  scene.cpp
(+306 files in other folders)
